# NodeIQ

./: .gitignore  CHECKLIST.md  CONTEXT.md  DECISIONS.md  LEARNING_NOTES.md  LOGS.md  NODEIQ_QA_REPORT.md  PROJECT_RULES.md  README.md  ROADMAP.md  dev_summary.py  pyproject.toml  requirements.txt
docs/: architecture.md  cli_design.md  collector_guidelines.md  coordinator.md  cpu_memory_collector.md  data_model_design.md  disk_collector.md  logs_collector.md  network_collector.md  permissions_collector.md  process_collector.md  process_collector_design.md  prompt_builder_design.md  report_formatter.md  resource_collector.md  scheduled_jobs_collector.md  services_collector.md  snapshot_persistence.md  snapshot_schema.md  summary_engine_design.md  system_collector.md
scripts/: sync_to_vm.sh
src/nodeiq/: __init__.py  __main__.py  report.py  summary.py
tests/: edge_cases.json  expected_answers.json  test_questions.py  test_report.py  test_summary.py
tests/cli/: test_ask_errors.py  test_freshness.py  test_main.py  test_platform_info.py  test_presentation.py  test_shell.py
tests/collectors/: test_cpu_memory.py  test_cpu_memory_integration.py  test_disk.py  test_disk_integration.py  test_logs.py  test_logs_integration.py  test_network.py  test_network_integration.py  test_permissions.py  test_permissions_integration.py  test_processes.py  test_processes_integration.py  test_resource.py  test_resource_integration.py  test_scheduled_jobs.py  test_scheduled_jobs_integration.py  test_services.py  test_services_integration.py  test_system.py  test_system_integration.py
tests/core/: test_collector.py  (+7 more)
(+36 files in other folders)
